--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
         "gulp-uglify": "3.0.1"
     },
     "scripts": {
-        "start": "node gulpfile.js"
+        "start": "node server.js"
     }
 }
