--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "title": "Portfolio",
+    "title": "Agency",
     "name": "startbootstrap-agency",
-    "version": "5.0.7",
+    "version": "5.2.2",
     "scripts": {
         "start": "node server.js"
     },
@@ -29,24 +29,22 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "5.8.1",
+        "@fortawesome/fontawesome-free": "5.10.2",
         "bootstrap": "4.3.1",
-        "express": "^4.16.4",
-        "jquery": "3.3.1",
+        "jquery": "3.4.1",
         "jquery.easing": "^1.4.1"
     },
     "devDependencies": {
-        "browser-sync": "2.26.3",
-        "del": "4.0.0",
-        "gulp": "4.0.0",
-        "gulp-autoprefixer": "6.0.0",
-        "gulp-clean-css": "4.0.0",
-        "gulp-header": "2.0.7",
+        "browser-sync": "2.26.7",
+        "del": "5.1.0",
+        "gulp": "4.0.2",
+        "gulp-autoprefixer": "7.0.0",
+        "gulp-clean-css": "4.2.0",
+        "gulp-header": "2.0.9",
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "1.4.0",
         "gulp-sass": "4.0.2",
         "gulp-uglify": "3.0.2",
-        "merge-stream": "^1.0.1",
-        "nodemon": "^1.18.10"
+        "merge-stream": "2.0.0"
     }
 }
