Organizando Readme.me e Package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-    "title": "Agency",
-    "name": "startbootstrap-agency",
-    "version": "5.2.2",
+    "title": "Portfolio",
+    "version": "3.0",
     "scripts": {
         "start": "node server.js"
     },
-    "description": "Agency is a one page HTML theme for Bootstrap.",
+    "description": "Portifolio de Douglas Profirio Ferreira",
     "keywords": [
         "css",
         "sass",
@@ -20,7 +19,6 @@
         "email": "feedback@startbootstrap.com"
     },
     "license": "MIT",
-    "author": "Start Bootstrap",
     "contributors": [
         "David Miller (http://davidmiller.io/)"
     ],
