--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "bootstrap": "4.3.1",
         "express": "^4.17.1",
         "jquery": "3.4.1",
-        "jquery.easing": "^1.4.1"
+        "jquery.easing": "^1.4.1",
+        "openssl": "^1.1.0"
     },
     "devDependencies": {
         "browser-sync": "2.26.7",
